5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1573_1326.log
== TEST (2019-03-27 15:07:39) 
-- CODE:
print9(40 + 35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print9(40 + 35)
NameError: name 'print9' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:07:48) 
-- CODE:
print
(40 + 35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print9(40 + 35)
NameError: name 'print9' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:10:14) 
-- CODE:
total = 40 + 35
print(total)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:10:21) 
-- CODE:
total = 40 + 35
print(total)
-- EXECUTION TIME:
0.19945
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
